<resources>
    <string name="app_name">Knox Key Management</string>
    <string name="title_activity_tms">Knox Key Management</string>

    <!-- Strings related to login -->
    <string name="prompt_terminal_id">Terminal ID</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_eddie_sign_update"><![CDATA[Sign & Update]]></string>
    <string name="prompt_ttk_key_id">TTK keyId</string>
    <string name="title_activity_fake_token_gui">FakeTokenGuiActivity</string>
    <string name="title_activity_fake_tms">FakeTmsActivity</string>
    <string name="title_activity_knox_activate">KnoxActivateActivity</string>
    <string name="delete_token_keys">Delete keys</string>
    <string name="upload_token_keys">Upload keys</string>
    <string name="enterprise_device_admin">Android Unified Container</string>
    <string name="enterprise_device_admin_description">DeviceAdmin class</string>
</resources>
